--- a/theme.css
+++ b/theme.css
@@ -38,3 +38,41 @@ body {
 img {
     width: 100%;
 }
+
+.captions p {
+    max-width: 740px;
+    padding: 10px 15px;
+    margin: 10px auto;
+    background-color: rgba(255,255,255,.85);
+    color: rgb(52,52,52);
+    box-shadow: 0px 0px 2px #ddd;
+}
+
+.taipei-teal 
+{
+    background: -moz-linear-gradient(left, rgba(122,202,174,0.5) 0%, rgba(126,108,87,0.24) 50%, rgba(237,255,245,0.5) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(122,202,174,0.5)), color-stop(50%,rgba(126,108,87,0.24)), color-stop(100%,rgba(237,255,245,0.5))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, rgba(122,202,174,0.5) 0%,rgba(126,108,87,0.24) 50%,rgba(237,255,245,0.5) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, rgba(122,202,174,0.5) 0%,rgba(126,108,87,0.24) 50%,rgba(237,255,245,0.5) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, rgba(122,202,174,0.5) 0%,rgba(126,108,87,0.24) 50%,rgba(237,255,245,0.5) 100%); /* IE10+ */
+    background: linear-gradient(to right, rgba(122,202,174,0.5) 0%,rgba(126,108,87,0.24) 50%,rgba(237,255,245,0.5) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#807acaae', endColorstr='#80edfff5',GradientType=1 ); /* IE6-9 */
+}
+
+.taipei-teal img {
+    border: 1px solid rgba(255,255,255,.45);
+    box-shadow: 0px 0px 1px #ddd;
+
+}
+
+.taipei-teal h1 {
+    color: rgb(62,62,62);
+    text-align: center;
+    max-width: 740px;
+    padding: 10px 15px;
+    margin: 10px auto;
+    background-color: rgba(255,255,255,.85);
+    color: rgb(62,62,62);
+    box-shadow: 0px 0px 2px #ddd;
+}
+
