--- a/theme.css
+++ b/theme.css
@@ -46,6 +46,7 @@ img {
     background-color: rgba(255,255,255,.85);
     color: rgb(52,52,52);
     box-shadow: 0px 0px 2px #ddd;
+    line-height: 1.3;
 }
 
 .taipei-teal 
