--- a/theme.css
+++ b/theme.css
@@ -2,8 +2,14 @@ h1 {
   color: #A30000;
 }
 
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
+
 .menu a {
   font-weight: bold;
+  text-decoration: underline;
 }
 
 li {
@@ -20,6 +26,7 @@ li > a:hover {
 
 body {
   font-family: arial;
+  margin: 0px 0px;
 }
 
 .menu {
@@ -31,15 +38,27 @@ body {
 }
 
 .container {
-  margin: 25px auto;
+  margin: 0px auto;
+  padding: 1% 2%;
   max-width: 740px;
+  background-color: rgba(250,250,250,.95);
+  border-left: 10px solid rgba(245,250,245,.45);
+  border-right: 10px dashed rgba(245,250,245,.45);
+  box-shadow: 0px 0px 2px #ddd;
 }
 
 img {
     width: 100%;
 }
 
+.container img{
+    -webkit-filter: opacity(.9);
+    filter: opacity(.9);
+    -moz-filter: opacity(.9);
+}
+
 .captions p {
+    font-size: 18px;
     max-width: 740px;
     padding: 10px 15px;
     margin: 10px auto;
@@ -47,6 +66,11 @@ img {
     color: rgb(52,52,52);
     box-shadow: 0px 0px 2px #ddd;
     line-height: 1.3;
+}
+
+.fuxing {
+    background-image: url('taipei/img/taipei-roof-bg.png');
+    background-size: 100%;
 }
 
 .taipei-teal 
