--- a/theme.css
+++ b/theme.css
@@ -42,8 +42,8 @@ body {
   padding: 1% 2%;
   max-width: 740px;
   background-color: rgba(250,250,250,.95);
-  border-left: 10px solid rgba(245,250,245,.45);
-  border-right: 10px dashed rgba(245,250,245,.45);
+  border-left: 10px solid rgba(255,255,255,.98);
+  border-right: 10px solid rgba(255,255,255,.98);
   box-shadow: 0px 0px 2px #ddd;
 }
 
