--- a/theme.css
+++ b/theme.css
@@ -69,7 +69,7 @@ img {
 }
 
 .fuxing {
-    background-image: url('taipei/img/taipei-roof-bg.png');
+    background-image: url('taipei/img/taipei-roof-bg.jpg');
     background-size: 100%;
 }
 
