--- a/theme.css
+++ b/theme.css
@@ -57,6 +57,11 @@ li > a:hover, li > a:hover {
 }
 
 
+p {
+  line-height: 1em;
+  margin-top: 0.4em;
+  margin-bottom: 0.5em;
+}
 
 
 .captions p {
