--- a/theme.css
+++ b/theme.css
@@ -37,8 +37,18 @@ a {
   margin-right: 5px;
 }
 
-img {
+.responsive-container {
   width: 100%;
+  padding-bottom: 100%;  /* image is square, prevent content reflow */
+  position: relative;
+}
+
+.responsive-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 p a{
